[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/grenade dummy(1).png" type="Texture" id=1]
[ext_resource path="res://Scripts/HandGrenade.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.5
bounce = 0.5

[sub_resource type="CapsuleShape2D" id=3]
radius = 2.0
height = 4.0

[node name="HandGrenade" type="RigidBody2D" groups=["Grenades"]]
collision_layer = 2
collision_mask = 2
physics_material_override = SubResource( 2 )
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="ExplosionTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_HandGrenade_body_entered"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
